--- a/mini-rainbow.html
+++ b/mini-rainbow.html
@@ -20,6 +20,54 @@ body {
 .preview-label {
     margin-bottom: 5px;
 }
+
+.popup-overlay {
+  display: none;
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.5);
+  z-index: 1000;
+}
+
+.popup {
+  position: fixed;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  background-color: white;
+  padding: 20px;
+  border-radius: 8px;
+  box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
+  text-align: center;
+  z-index: 1001;
+  width: 300px;
+}
+
+.popup h3 {
+  margin: 0 0 10px 0;
+  color: #333;
+}
+
+.popup p {
+  margin: 0 0 20px 0;
+  color: #666;
+}
+
+.popup button {
+  padding: 8px 20px;
+  background-color: #007bff;
+  color: white;
+  border: none;
+  border-radius: 4px;
+  cursor: pointer;
+}
+
+.popup button:hover {
+  background-color: #0056b3;
+}
 </style>
 </head>
 
@@ -70,10 +118,54 @@ body {
   <div id="placeholder6" class="placeholder"></div>
 </div>
 <div class="input-group">
-  <input type="text" id="infoDisplay" readonly title="Click to copy">
-  <button id="copyButton" class="copy-button">Click to Copy Info...</button>
+  <input type="text" id="infoDisplay" readonly>
+  <button id="copyButton" class="copy-button">Copy Info</button>
 </div>
+
+<div class="popup-overlay" id="popupOverlay">
+  <div class="popup">
+    <h3>Info Copied!</h3>
+    <p>Paste the info to Chat for me please 😊</p>
+    <button id="popupOkayButton">Okay</button>
+  </div>
+</div>
+
 <script src="js/scripts-mini.js"></script>
 <script src="js/version.js"></script>
+<script>
+document.addEventListener('DOMContentLoaded', function() {
+    const copyButton = document.getElementById('copyButton');
+    const popupOverlay = document.getElementById('popupOverlay');
+    const popupOkayButton = document.getElementById('popupOkayButton');
+    const infoDisplay = document.getElementById('infoDisplay');
+
+    function showPopup() {
+        popupOverlay.style.display = 'block';
+    }
+
+    function hidePopup() {
+        popupOverlay.style.display = 'none';
+    }
+
+    copyButton.addEventListener('click', function() {
+        infoDisplay.select();
+        document.execCommand('copy');
+        showPopup();
+    });
+
+    popupOkayButton.addEventListener('click', hidePopup);
+    popupOverlay.addEventListener('click', function(e) {
+        if (e.target === popupOverlay) {
+            hidePopup();
+        }
+    });
+
+    document.addEventListener('keydown', function(e) {
+        if (e.key === 'Escape') {
+            hidePopup();
+        }
+    });
+});
+</script>
 </body>
 </html>
