--- a/large-rainbow.html
+++ b/large-rainbow.html
@@ -58,13 +58,13 @@
 
 <body>	
 <div class="input-group">
-  <label for="textInputRow1" class="input-label">1. Insert Row 1 Text</label>
-  <input type="text" class="container-width" id="textInputRow1" placeholder="Enter text for row 1..." value="" maxlength="20">
+  <label for="textInputRow1" class="input-label">1. Row 1</label>
+  <input type="text" class="container-width" id="textInputRow1" placeholder="Enter text/name" value="" maxlength="20">
 </div>
 
 <div class="input-group">
-  <label for="textInputRow2" class="input-label">2. Insert Row 2 Text</label>
-  <input type="text" class="container-width" id="textInputRow2" placeholder="Enter text for row 2..." value="" maxlength="20">
+  <label for="textInputRow2" class="input-label">2. Row 2</label>
+  <input type="text" class="container-width" id="textInputRow2" placeholder="Enter text/name" value="" maxlength="20">
 </div>
 
 <div class="input-group" style="display: none;"> 
